Fix to dropboxes sometimes not registering selections, add scrollbars for long lists.

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -660,3 +660,15 @@ ul.reports_toolbar li {
 ul.reports_toolbar li a {
 	padding: 2px 6px;
 }
+
+.ui-autocomplete {
+		max-height:300px;
+		overflow-y: auto;
+	}
+	/* IE 6 doesn't support max-height
+	 * we use height instead, but this forces the menu to always be this tall
+	 */
+	* html .ui-autocomplete {
+		height: 300px;
+	}
+
